removed animations, fixed more fonts and spacing

--- a/website.css
+++ b/website.css
@@ -12,6 +12,12 @@ img {
     border-radius: 50%;
 }
 
+
+.landing {
+    margin-top: 10%;
+    margin-left: 5%;
+}
+
 .link {
 	outline: none;
 	text-decoration: none;
@@ -23,116 +29,10 @@ img {
     font-family: 'Source Sans Pro', sans-serif;
 }
 
-/* START of Animation for Header */
-
-.link--header {
-	text-transform: uppercase;
-	font-weight: 900;
-	overflow: hidden;
-	line-height: 0.9;
-	color: #606060;
-}
-
-.link--header:hover {
-	color: #606060;
-}
-
-.link--header::after {
-	content: '';
-	position: absolute;gi
-	height: 16px;
-	width: 100%;
-	top: 50%;
-	margin-top: -8px;
-	right: 0;
-	background: #F9F9F9;
-	transform: translate3d(-100%,0,0);
-	transition: transform 0.4s;
-	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
-}
-
-.link--header:hover::after {
-	transform: translate3d(100%,0,0);
-}
-
-.link--header::before {
-	content: attr(data-letters);
-	position: absolute;
-	z-index: 2;
-	overflow: hidden;
-	color:#0080FF;
-	white-space: normal;
-	width: 0%;
-	transition: width 0.2s 0.1s;
-}
-
-.link--header:hover::before {
-	width: 100%;
-}
-/* END of Animation for Header */
-
-/* START of Animation for About */
-
-
-.link--about {
-	text-transform: uppercase;
-    float: left;
-	font-weight: 900;
-	overflow: hidden;
-	line-height: 0.75;
-	color: #606060;
-    font-size: 75px;
-    float: left;
-    padding-top: 2%;
-}
-
-.link--about:hover {
-	color: #606060;
-}
-
-.link--about::after {
-	content: '';
-	position: absolute;gi
-	height: 16px;
-	width: 100%;
-	top: 50%;
-	margin-top: -8px;
-	right: 0;
-	background: #F9F9F9;
-	transform: translate3d(-100%,0,0);
-	transition: transform 0.4s;
-	transition-timing-function: cubic-bezier(0.7,0,0.3,1);
-}
-
-.link--about:hover::after {
-	transform: translate3d(100%,0,0);
-}
-
-.link--about::before {
-	content: attr(data-letters);
-	position: absolute;
-	z-index: 2;
-	overflow: hidden;
-	color: #20B2AA;
-	white-space: nowrap;
-	width: 0%;
-	transition: width 0.2s 0.1s;
-}
-
-.link--about:hover::before {
-	width: 100%;
-}
-
-/* END of Animation for About */
-
-
-
 p {
     font-size: 20px;;
     margin-left: 2%;
 }
-
-
 
 .icons {
     position: fixed;
@@ -143,7 +43,7 @@ p {
 
 .fab {
     padding: 0 5px;
-    color: 	#484848;
+    color:  #484848;
 } 
 
 
@@ -153,43 +53,13 @@ p {
     padding-top: 4%;
 }
 
-#fullpage{
-    padding: 0 12% 10% 5%;
-    background-color: transparent;
-}
-
-#aboutpar {
-    padding: 15vh 8px 0 30px;
-    text-align: right;
-    display: table-cell;
-    vertical-align: middle;
-}
-
-#me{
-    float:right;
-    border-radius: 10%;
-}
-
 .fab{
-	font-size: 20px;
-}
-
-
-.otherpages {
-	text-align: center;
+    font-size: 20px;
 }
 
 .about {
-	font-size: 40px;
-	margin-top: 8px;
-	text-align: left;
-}
-
-#profile{
-    padding-top: 18vh;
-}
-
-.aboutmediv {
-    padding-left: 15%;
-
+    font-size: 40px;
+    margin-top: 8px;
+    margin-left: 5%;
+    width: 70%;
 }
